<?xml version="1.0"?>
<package>
  <name>ir100_navigation</name>
  <version>0.0.1</version>
  <description>Autonomous mapping and navigation demos for the Bulldog</description>

  <author email="test@123.com">Shawn Ma</author>
  <maintainer email="test@123.com">Shawn Ma</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/bulldog_navigation</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend>

  <export>
  </export>
</package>
